# knights-game

./: .gitignore  CMakeLists.txt  README.md  mediator.sh  player1.sh  player2.sh
data/: mapa.txt  mapa1.txt  mapa2.txt  mapa3.txt  mapa4.txt  rozkazy.txt  rozkazy2.txt  s.txt  s11.txt  s12.txt  s21.txt  s22.txt  s31.txt  s32.txt  s41.txt  s42.txt  status.txt  status2.txt
src/: Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  Mediator.cpp  Mediator.h  Player.cpp  Player.h  mainMediator.cpp  mainPlayer.cpp
src/commands/: Attack.cpp  Attack.h  Build.cpp  Build.h  Command.h  Commands.cpp  Commands.h  Move.cpp  Move.h
tests/: commandsTest.txt  mapTest.txt  statusTest.txt  tests.cpp
